# EDPrintTool

./: .gitignore  CLAUDE.md  README.md  install-windows.bat  package-lock.json  package.json  start.bat
.github/workflows/: build-native.yml
public/: edprint.js  index.html  openapi.json
relay/: README.md  openapi.json  package.json  server.js
src/: actions.js  electron.js  escpos.js  printer-profiles.js  printer.js  relay-client.js  server.js
src-native/EDPrintTool/: EDPrintTool.csproj  EscPosEncoder.cs  HttpServer.cs  MainForm.cs  PrinterDiscovery.cs  PrinterStore.cs  Program.cs  RawPrinter.cs  RelayClient.cs  TrayIcon.cs  UpdateChecker.cs
src-native/EDPrintTool/Models/: LabelPreset.cs  PrinterInfo.cs  PrinterSettings.cs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  printer.rs  server.rs
